# ConvertXion

./: .gitignore  README.md  package.json
.github/: copilot-instructions.md
backend/: .dockerignore  dockerfile  package.json  server.ts  tsconfig.json
backend/routes/: convert.ts
nextjs/: package.json  tailwind.config.js
nextjs/src/app/: globals.css  layout.tsx  page.tsx  tailwind.config.js
nextjs/src/app/components/: FileUpload.tsx  Footer.tsx  Header.tsx  Layout.tsx  ProcessBtn.tsx
rust-backend/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  railway.toml
rust-backend/src/: compress_jpeg.rs  handlers.rs  image_utils.rs  main.rs  mod.rs  routes.rs  ws_handler.rs
