[package]
name = "convertxion_engine"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { version = "4.0", features = ["macros"] }
actix-multipart = "0.6"

# Image processing
image = "0.24"
ravif = "0.11.11"
webp = "0.2"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Configuration
config = "0.13"

# Utilities
mime = "0.3"
bytes = "1.0"
futures = "0.3"  # For working with async streams
zip = "0.6"      # For creating zip archives
rgb = "0.8.50"
dotenv = "0.15.0"
crossterm = "0.28.1"
actix-cors = "0.7.1"
rayon = "1.10.0"
actix = "0.13.5"
actix-web-actors = "4.3.1"
num_cpus = "1.16.0"
png = "0.17.16"
mozjpeg = { version = "0.10.13", features = ["default"] }
